--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -2,6 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>accountapi</artifactId> <!-- NB this is the name of the war file -->
+  <version>0.0.1-SNAPSHOT</version>
   
   <packaging>war</packaging>
   <name>Account API</name>
