Tweaks for compatibility with accountui

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=accountapi
 
+# TODO Find a way to specify the installation specific path at runtime, ie. not in the jar/war
+spring.datasource.url=jdbc:ucanaccess://C:/Development/accountDB/acc2003_TEST.mdb
 
-spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
+#spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
 #spring.datasource.url=jdbc:ucanaccess://${DBPATH}
 #;showSchema=true;memory=false
 spring.datasource.username=Admin
