--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -27,3 +27,19 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+# HikariPool-1 - Connection net.ucanaccess.jdbc.UcanaccessConnection@4e83a42f[C:\\Development\\accountDB\\acc2003_TEST.mdb] marked as broken because of SQLSTATE(08503), ErrorCode(-1353)
+# after period of inactivity. Need to somehow tell Hikari to reopen the connection or to keep it alive
+# Needless to say I go these from Google and have no clue what they do or whether they will help!!
+spring.datasource.test-while-idle=true
+spring.datasource.validation-query=SELECT 1;
+spring.datasource.time-between-eviction-runs-millis=60000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.validationTimeout=300000
+
+spring.datasource.remove-abandoned=true
+spring.datasource.remove-abandoned-timeout=60
+
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
