--- a/account.ui/package.json
+++ b/account.ui/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "html5-qrcode": "^2.2.1",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~7.5.0",
