connection exception research

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -41,5 +41,15 @@ spring.datasource.remove-abandoned=true
 spring.datasource.remove-abandoned-timeout=60
 
 spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.idleTimeout=600000
-spring.datasource.hikari.maxLifetime=1800000
+
+# Still get the connection closed exception. Try reducing
+# values to see if forces hikari to close connections itself
+# Documentation: 
+# https://www.baeldung.com/spring-boot-hikari
+# https://github.com/brettwooldridge/HikariCP?tab=readme-ov-file#gear-configuration-knobs-baby
+# and then reopen them as needed: 300000=5mins
+#spring.datasource.hikari.idleTimeout=600000
+#spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.idleTimeout=150000
+spring.datasource.hikari.maxLifetime=300000
+spring.datasource.hikari.keepaliveTime=150000
