more connection research

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -34,13 +34,10 @@ spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 spring.datasource.test-while-idle=true
 spring.datasource.validation-query=SELECT 1;
 spring.datasource.time-between-eviction-runs-millis=60000
-spring.datasource.hikari.idle-timeout=600000
-spring.datasource.hikari.validationTimeout=300000
 
 spring.datasource.remove-abandoned=true
 spring.datasource.remove-abandoned-timeout=60
 
-spring.datasource.hikari.connectionTimeout=30000
 
 # Still get the connection closed exception. Try reducing
 # values to see if forces hikari to close connections itself
@@ -50,6 +47,9 @@ spring.datasource.hikari.connectionTimeout=30000
 # and then reopen them as needed: 300000=5mins
 #spring.datasource.hikari.idleTimeout=600000
 #spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.validationTimeout=5000
+spring.datasource.hikari.leakDetectionThreshold=10000
 spring.datasource.hikari.idleTimeout=150000
 spring.datasource.hikari.maxLifetime=300000
 spring.datasource.hikari.keepaliveTime=150000
