Attempts to persuade Hikari to open DB connection when it is closed.

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=accountapi
 
 # TODO Find a way to specify the installation specific path at runtime, ie. not in the jar/war
-spring.datasource.url=jdbc:ucanaccess://C:/Development/accountDB/acc2003_TEST.mdb
+# WARNING: LIVE database on minnie: C:/Development/accountDB/acc2003.mdb
+spring.datasource.url=jdbc:ucanaccess://C:/Development/accountDB/acc2003.mdb
 
 #spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
 #spring.datasource.url=jdbc:ucanaccess://${DBPATH}
@@ -30,10 +31,10 @@ spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 # HikariPool-1 - Connection net.ucanaccess.jdbc.UcanaccessConnection@4e83a42f[C:\\Development\\accountDB\\acc2003_TEST.mdb] marked as broken because of SQLSTATE(08503), ErrorCode(-1353)
 # after period of inactivity. Need to somehow tell Hikari to reopen the connection or to keep it alive
-# Needless to say I go these from Google and have no clue what they do or whether they will help!!
+# Needless to say I got these from Google and have no clue what they do or whether they will help!!
 spring.datasource.test-while-idle=true
-spring.datasource.validation-query=SELECT 1;
-spring.datasource.time-between-eviction-runs-millis=60000
+# spring.datasource.validation-query=SELECT 1;
+spring.datasource.time-between-eviction-runs-millis=6000
 
 spring.datasource.remove-abandoned=true
 spring.datasource.remove-abandoned-timeout=60
@@ -50,6 +51,12 @@ spring.datasource.remove-abandoned-timeout=60
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.leakDetectionThreshold=10000
-spring.datasource.hikari.idleTimeout=150000
-spring.datasource.hikari.maxLifetime=300000
-spring.datasource.hikari.keepaliveTime=150000
+
+# WTF!? idleTimeout has been set but has no effect because the pool is operating as a fixed size pool.
+# 300000/150000 didn't stop the connection closed failure
+# 30000/15000
+spring.datasource.hikari.maxLifetime=30000
+spring.datasource.hikari.idleTimeout=15000
+spring.datasource.hikari.keepaliveTime=15000
+spring.datasource.hikari.maximumPoolSize=2
+spring.datasource.hikari.minimumIdle=0
