--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -28,11 +28,30 @@
    </properties>
    
    <dependencies>
-      <dependency>
+      <!-- dependency>
          <groupId>net.sf.ucanaccess</groupId>
          <artifactId>ucanaccess</artifactId>
          <version>5.0.1</version>
-      </dependency>
+      </dependency -->
+      
+      <!-- Newer version with newer dependencies. Source: https://github.com/spannm/ucanaccess?tab=readme-ov-file -->
+      <dependency>
+          <groupId>io.github.spannm</groupId>
+          <artifactId>ucanaccess</artifactId>
+          <version>5.1.1</version>
+      </dependency>   
+         
+<!-- https://mvnrepository.com/artifact/xalan/xalan -->
+<!-- Try to stop 'formContentFilter' when hot redeploying the app on tomcat. No idea why this is needed
+     since spring supposedly has no dependencies on xalan yet still the 'org.apache.xalan.processor.TransformerFactoryImpl not found'
+     exception prevents the application from starting
+ -->
+<dependency>
+    <groupId>xalan</groupId>
+    <artifactId>xalan</artifactId>
+    <version>2.7.3</version>
+</dependency>
+      
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
