resurrector as template seems to work nicely

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=accountapi
 
 # TODO Find a way to specify the installation specific path at runtime, ie. not in the jar/war
 # WARNING: LIVE database on minnie: C:/Development/accountDB/acc2003.mdb
-spring.datasource.url=jdbc:ucanaccess://C:/Development/accountDB/acc2003.mdb
+#spring.datasource.url=jdbc:ucanaccess://C:/Development/accountDB/acc2003.mdb
 
-#spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
+spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
 #spring.datasource.url=jdbc:ucanaccess://${DBPATH}
 #;showSchema=true;memory=false
 spring.datasource.username=Admin
@@ -57,6 +57,7 @@ spring.datasource.hikari.leakDetectionThreshold=10000
 # 30000/15000
 spring.datasource.hikari.maxLifetime=30000
 spring.datasource.hikari.idleTimeout=15000
-spring.datasource.hikari.keepaliveTime=15000
+# keepaliveTime >= 30000
+spring.datasource.hikari.keepaliveTime=30000
 spring.datasource.hikari.maximumPoolSize=2
 spring.datasource.hikari.minimumIdle=0
