Added app title determined by api config. Who would have thought something so trivial would required so many changes!!

--- a/account.api/src/main/resources/application-dev.properties
+++ b/account.api/src/main/resources/application-dev.properties
@@ -1,2 +1,4 @@
+falc.account.db=TEST
+falc.account.version=0.2.1
 
 spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
