--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+falc.account.name=JAccount
+falc.account.db=LIVE
+falc.account.version=0.2.0
+
 spring.application.name=accountapi
+
 
 # NB could put the DEV setting in this file using so-called multi-document profile
 # and the 'hash dash dash dash spring.config.activate.on-profile=dev'
