--- a/account.ui/package.json
+++ b/account.ui/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
-    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "html5-qrcode": "^2.2.1",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "^15.2.11",
     "@angular/compiler-cli": "^15.2.10",
+    "@angular/localize": "^15.2.10",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
