--- a/account.ui/package.json
+++ b/account.ui/package.json
@@ -10,6 +10,12 @@
   },
   "private": true,
   "dependencies": {
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "html5-qrcode": "^2.2.1",
+    "ng-bootstrap": "^1.6.3",
     "@angular/animations": "^18.2.4",
     "@angular/common": "^18.2.4",
     "@angular/compiler": "^18.2.4",
@@ -18,12 +24,6 @@
     "@angular/platform-browser": "^18.2.4",
     "@angular/platform-browser-dynamic": "^18.2.4",
     "@angular/router": "^18.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
-    "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "html5-qrcode": "^2.2.1",
-    "ng-bootstrap": "^1.6.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -31,15 +31,14 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.4",
     "@angular/cli": "^18.2.4",
+    "@angular/compiler": "^18.2.4",
     "@angular/compiler-cli": "^18.2.4",
-    "@angular/localize": "^18.2.4",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.3.0",
+    "@types/jasmine": "~2.8.8",
+    "jasmine-core": "~2.99.1",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "typescript": "~5.4.5"
   }
 }
