--- a/account.ui/angular.json
+++ b/account.ui/angular.json
@@ -1,122 +1,135 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "accountui": {
-      "projectType": "application",
-      "schematics": {},
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:application",
-          "options": {
-            "outputPath": {
-              "base": "dist/accountui"
+   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+   "version": 1,
+   "newProjectRoot": "projects",
+   "projects": {
+      "accountui": {
+         "projectType": "application",
+         "schematics": {
+         },
+         "root": "",
+         "sourceRoot": "src",
+         "prefix": "app",
+         "architect": {
+            "build": {
+               "builder": "@angular-devkit/build-angular:application",
+               "options": {
+                  "optimization": false,
+                  "extractLicenses": false,
+                  "sourceMap": true,
+                  "namedChunks": true,                  
+                  "outputPath": {
+                     "base": "dist/accountui"
+                  },
+                  "index": "src/index.html",
+                  "polyfills": [
+                     "zone.js",
+                     "@angular/localize/init"
+                  ],
+                  "tsConfig": "tsconfig.app.json",
+                  "assets": [
+                     "src/favicon.ico",
+                     "src/assets"
+                  ],
+                  "styles": [
+                     "src/styles.css",
+                     "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                     "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+                  ],
+                  "scripts": [
+                  ],
+                  "browser": "src/main.ts"
+               },
+               "configurations": {
+                  "production": {
+                     "budgets": [
+                        {
+                           "type": "initial",
+                           "maximumWarning": "1200kb",
+                           "maximumError": "2mb"
+                        },
+                        {
+                           "type": "anyComponentStyle",
+                           "maximumWarning": "4kb",
+                           "maximumError": "6kb"
+                        }
+                     ],
+                     "fileReplacements": [
+                        {
+                           "replace": "src/environments/environment.ts",
+                           "with": "src/environments/environment.prod.ts"
+                        }
+                     ],
+                     "outputHashing": "all",
+                     "optimization": {
+                        "scripts": true,
+                        "styles": {
+                           "minify": true,
+                           "inlineCritical": false
+                        },
+                        "fonts": true
+                     }
+                  },
+                  "development": {
+
+                  },
+                  "nobe": {
+                     "fileReplacements": [
+                        {
+                           "replace": "src/environments/environment.ts",
+                           "with": "src/environments/environment.nobe.ts"
+                        }
+                     ]                     
+                  }
+               },
+               "defaultConfiguration": "production"
             },
-            "index": "src/index.html",
-            "polyfills": [
-              "zone.js",
-              "@angular/localize/init"
-            ],
-            "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
-            ],
-            "scripts": [
-            ],
-            "browser": "src/main.ts"
-            
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "1200kb",
-                  "maximumError": "2mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kb",
-                  "maximumError": "6kb"
-                }
-              ],
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "outputHashing": "all",
-              "optimization": {
-                 "scripts": true,
-                 "styles": {
-                   "minify": true,
-                   "inlineCritical": false
-                 },
-                 "fonts": true
-              }              
+            "serve": {
+               "builder": "@angular-devkit/build-angular:dev-server",
+               "configurations": {
+                  "production": {
+                     "buildTarget": "accountui:build:production"
+                  },
+                  "development": {
+                     "buildTarget": "accountui:build:development"
+                  },
+                  "nobe": {
+                     "buildTarget": "accountui:build:nobe"
+                  }
+               },
+               "defaultConfiguration": "development"
             },
-            "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+            "extract-i18n": {
+               "builder": "@angular-devkit/build-angular:extract-i18n",
+               "options": {
+                  "buildTarget": "accountui:build"
+               }
+            },
+            "test": {
+               "builder": "@angular-devkit/build-angular:karma",
+               "options": {
+                  "main": "src/test.ts",
+                  "polyfills": [
+                     "src/polyfills.ts",
+                     "@angular/localize/init"
+                  ],
+                  "tsConfig": "tsconfig.spec.json",
+                  "karmaConfig": "karma.conf.js",
+                  "assets": [
+                     "src/favicon.ico",
+                     "src/assets"
+                  ],
+                  "styles": [
+                     "src/styles.css"
+                  ],
+                  "scripts": [
+                  ]
+               }
             }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "buildTarget": "accountui:build:production"
-            },
-            "development": {
-              "buildTarget": "accountui:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "buildTarget": "accountui:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": [
-              "src/polyfills.ts",
-              "@angular/localize/init"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        }
+         }
       }
-    }
-  },
-  "cli": {
-    "analytics": false
-  }
+   },
+   "cli": {
+      "analytics": false
+   }
 }
