use sass, tweak display

--- a/account.ui/package.json
+++ b/account.ui/package.json
@@ -27,6 +27,7 @@
     "ng-bootstrap": "^1.6.3",
     "ngx-device-detector": "^8.0.0",
     "rxjs": "~7.5.0",
+    "sass": "^1.79.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
