--- a/account.ui/angular.json
+++ b/account.ui/angular.json
@@ -50,13 +50,13 @@
                      "budgets": [
                         {
                            "type": "initial",
-                           "maximumWarning": "1200kb",
-                           "maximumError": "2mb"
+                           "maximumWarning": "3200kb",
+                           "maximumError": "6mb"
                         },
                         {
                            "type": "anyComponentStyle",
-                           "maximumWarning": "4kb",
-                           "maximumError": "6kb"
+                           "maximumWarning": "4mb",
+                           "maximumError": "6mb"
                         }
                      ],
                      "fileReplacements": [
