fix for module 'hammer.js' is not ESM

--- a/account.ui/angular.json
+++ b/account.ui/angular.json
@@ -26,6 +26,7 @@
                      "zone.js",
                      "@angular/localize/init"
                   ],
+                  "allowedCommonJsDependencies": [ "hammerjs" ],
                   "tsConfig": "tsconfig.app.json",
                   "assets": [
                      "src/favicon.ico",
