Take the standing order cron schedule from properties files

--- a/account.api/src/main/resources/application-dev.properties
+++ b/account.api/src/main/resources/application-dev.properties
@@ -1,5 +1,9 @@
 falc.account.name=DevJAccount
 falc.account.db=TEST
 falc.account.version=0.2.1
+falc.account.standingorder.cron=*/60 * * * * *
+spring.datasource.url=jdbc:ucanaccess://E:/Development/workspace/accountREST/acc2003_TEST.mdb
 
-spring.datasource.url=jdbc:ucanaccess://C:/Development/workspace/accountrest/acc2003_TEST.mdb
+
+# this causes an exception when debugging so set it to a high value
+spring.datasource.hikari.leakDetectionThreshold=1000000
