--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
 falc.account.version=0.3.0
+falc.account.standingorder.cron=0 10 08 * * ?
 
 spring.application.name=accountapi
 
