check SOs more often so I can verify it is working

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.0b
-falc.account.standingorder.cron=0 10 08 * * ?
+falc.account.version=0.4.0c
+#falc.account.standingorder.cron=0 10 08 * * ?
+falc.account.standingorder.cron=* 5 * * * *
 
 spring.application.name=accountapi
 
@@ -51,7 +52,7 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.leakDetectionThreshold=10000
 
-spring.datasource.hikari.maxLifetime=30000
+spring.datasource.hikari.maxLifetime=30001
 spring.datasource.hikari.idleTimeout=15000
 # keepaliveTime >= 30000
 spring.datasource.hikari.keepaliveTime=30000
