--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>accountapi</artifactId> <!-- NB this is the name of the war file -->
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>accountapi</artifactId> <!-- NB this is part of the war file name -->
+  <version>0.4.1-RELEASE</version>
   
   <packaging>war</packaging>
   <name>Account API</name>
