--- a/account.api/src/main/resources/application-dev.properties
+++ b/account.api/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 falc.account.name=DevJAccount
 falc.account.db=TEST
-falc.account.version=0.2.1
-falc.account.standingorder.cron=*/60 * * * * *
+falc.account.version=0.4.2adev
+falc.account.standingorder.cron=* */2 * * * *
 spring.datasource.url=jdbc:ucanaccess://E:/Development/workspace/accountREST/acc2003_TEST.mdb
 
 
