--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.2b
+falc.account.version=0.4.2c
 #falc.account.standingorder.cron=0 10 08 * * ?
-falc.account.standingorder.cron=0 5 */1 * * ?
+falc.account.standingorder.cron=0 5 */4 * * ?
 
 spring.application.name=accountapi
 
