--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -84,6 +84,26 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
          </plugin>
          <plugin>
+             <artifactId>maven-resources-plugin</artifactId>
+             <executions>
+                 <execution>
+                     <id>copy-resources</id>
+                     <phase>validate</phase>
+                     <goals>
+                         <goal>copy-resources</goal>
+                     </goals>
+                     <configuration>
+                         <outputDirectory>${project.build.directory}/classes/static/</outputDirectory>
+                         <resources>
+                             <resource>
+                                 <directory>../account.ui/dist/accountui/browser</directory>
+                             </resource>
+                         </resources>
+                     </configuration>
+                 </execution>
+            </executions>
+         </plugin>
+         <plugin>
             <artifactId>maven-war-plugin</artifactId>   
             <!-- version>2.6</version -->   
             <configuration>     
