config to run in github codespace (no be)

--- a/account.ui/angular.json
+++ b/account.ui/angular.json
@@ -87,6 +87,14 @@
                            "with": "src/environments/environment.nobe.ts"
                         }
                      ]                     
+                  },
+                  "nobegh": {
+                     "fileReplacements": [
+                        {
+                           "replace": "src/environments/environment.ts",
+                           "with": "src/environments/environment.nobegh.ts"
+                        }
+                     ]                     
                   }
                },
                "defaultConfiguration": "production"
@@ -102,6 +110,9 @@
                   },
                   "nobe": {
                      "buildTarget": "accountui:build:nobe"
+                  },
+                  "nobegh": {
+                     "buildTarget": "accountui:build:nobegh"
                   }
                },
                "defaultConfiguration": "development"
