--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -6,6 +6,8 @@ falc.account.standingorder.cron=0 5 */4 * * ?
 
 spring.application.name=accountapi
 
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 
 # NB could put the DEV setting in this file using so-called multi-document profile
 # and the 'hash dash dash dash spring.config.activate.on-profile=dev'
