--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>accountapi</artifactId> <!-- NB this is part of the war file name -->
-  <version>0.4.9.0-SNAPSHOT</version>
+  <version>0.5.0.0-RELEASE</version>
   
   <packaging>war</packaging>
   <name>Account API</name>
