--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.9
+falc.account.version=0.4.9a
 #falc.account.standingorder.cron=0 10 08 * * ?
 falc.account.standingorder.cron=0 5 */4 * * ?
 
