--- a/account.ui/angular.json
+++ b/account.ui/angular.json
@@ -33,7 +33,7 @@
                      "src/assets"
                   ],
                   "styles": [
-                     "src/sass/custom-theme.scss",
+                     "@angular/material/prebuilt-themes/azure-blue.css",
                      "src/styles.css",
                      "node_modules/bootstrap/dist/css/bootstrap.min.css",
                      "node_modules/bootstrap-icons/font/bootstrap-icons.css"
