angular 19 off site

--- a/account.ui/angular.json
+++ b/account.ui/angular.json
@@ -42,7 +42,10 @@
                   "stylePreprocessorOptions": {
                      "includePaths": [
                      "src/sass"
-                     ]
+                     ],
+                     "sass": {
+                        "silenceDeprecations": ["mixed-decls", "color-functions", "global-builtin", "import"]
+                      }
                   },
                   "scripts": [
                   ],
