--- a/account.ui/package.json
+++ b/account.ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.1.3",
     "@angular/platform-browser-dynamic": "^19.1.3",
     "@angular/router": "^19.1.3",
+    "@fontsource-variable/roboto-flex": "^5.1.1",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.3.3",
