--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.20.1
+falc.account.version=0.4.21a
+#   second
+#   minute
+#   hour
+#   day of month
+#   month
+#   day of week
+# "0 10 08 * * ?"  08:10 every day
+# "*/10 * * * * *" every 10 seconds
+#                               s m  h  d m 
 #falc.account.standingorder.cron=0 10 08 * * ?
 falc.account.standingorder.cron=0 5 */4 * * ?
+# NORMAL (default) or SORTED
+#falc.account.transaction.listsort=SORTED
 
 spring.application.name=accountapi
 
