resync causes closed connection fatal error

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.21a
+falc.account.version=0.4.21ba
 #   second
 #   minute
 #   hour
@@ -64,7 +64,7 @@ spring.datasource.remove-abandoned-timeout=60
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.leakDetectionThreshold=10000
-
+spring.datasource.hikari.leak-detection-threshold=120000
 spring.datasource.hikari.maxLifetime=30001
 spring.datasource.hikari.idleTimeout=15000
 # keepaliveTime >= 30000
