Must recalc balance if date is changed

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.21ba
+falc.account.version=0.4.21d
 #   second
 #   minute
 #   hour
@@ -13,7 +13,7 @@ falc.account.version=0.4.21ba
 #falc.account.standingorder.cron=0 10 08 * * ?
 falc.account.standingorder.cron=0 5 */4 * * ?
 # NORMAL (default) or SORTED
-#falc.account.transaction.listsort=SORTED
+falc.account.transaction.listsort=SORTED
 
 spring.application.name=accountapi
 
