ready for release 0.4.22 - the java 21 (equinox) release

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 falc.account.name=JAccount
 falc.account.db=LIVE
-falc.account.version=0.4.22a
+falc.account.version=0.4.22
 #   second
 #   minute
 #   hour
