--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -4,7 +4,7 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>accountapi</artifactId> <!-- NB this is part of the war file name -->
-  <version>0.4.23.0-RELEASE</version>
+  <version>0.4.23.1-SNAPSHOT</version>
 
    <packaging>war</packaging>
    <name>Account API</name>
