configure for  h2 db with creation/population via test

--- a/account.api/src/test/resources/application-h2create.properties
+++ b/account.api/src/test/resources/application-h2create.properties
@@ -1,11 +1,22 @@
-# Use the 'default' DB location but creates or modifies the DB structure based on the 
-# entity definitions.
-# This could be triggered via a manually run test
-#
-# seems to be required for file db: 'update' will preserve the file db, create-drop needed to run tests with file db.
-# should probably be disabled for 'production'
-spring.jpa.hibernate.ddl-auto=update
 
-# gives a clue as to what is going on under the hood
+# "C:/Development/workspace_test/java/account/account.api/db/accountH2create
+# These values should override the values in application.properties - except that they don't always!!!
+falc.account.db.name=accountH2create
+falc.account.db.location=./db
+
+# 'update' should will preserve an existing file db, 
+# 'create-drop' is needed to repeatedly run tests which populate the DB.
+# 'never' should be the 'production' value to ensure the DB is not modified
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+####
+####
+#### Settings used specifically for the populateDB test where the DB is recreated each time and populated with
+#### the csv file content.
+
+#---
+spring.config.activate.on-profile=populatedb
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
