--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -20,40 +20,36 @@ spring.application.name=accountapi
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.show_sql=false
 
-# A file based DB which persists between invocations: ;IFEXISTS=TRUE may prevent recreation
-# and apparently must be a path spec, just a name by itself appears to result in weird errors
-# Probably best to dedicate a directory to the db as multiple files are created. Don't add an
-# extension as the created files have an extension added
-# Eventually this must be the path to use on the production system - for now it
-# is a directory at the level of src.
-spring.datasource.url=jdbc:h2:file:./db/testfiledb;DB_CLOSE_DELAY=-1
+# Still haven't found a way to provide installation dependent configuration, eg. specify the production location
+# of the DB on the production system independently of the installed war file
+falc.account.db.name=accountH2
+falc.account.db.location=C:/Development/accountDB
+
+spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_DELAY=-1
 
 spring.datasource.name=accounth2db
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
 # this is the default
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# Don't know if these are actually required but it is working with them so best leave them alone.
-#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-# Try to stop SqlExceptionHelper   : Cannot load view Visa BCC(EUR) : user lacks privilege or object not found: FROM
-# there is no reason whatsoever for it to be trying to do anything with the stored query called 'Visa BCC(EUR)'
-# Solved by using MS-Access to delete the 'stored queries' 
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # never: prevents db init from data.sql
 spring.sql.init.mode=never
 
-# bunch of values from https://medium.com/@tobias.strg/accessing-ms-access-with-hibernate-5-and-spring-boot-1b58f26ebb7d
 # none: production use - no changes to DB to be made by the 'normal' application
 spring.jpa.hibernate.ddl-auto=none 
 spring.jpa.generate-ddl=false
 
+# Start the H2 console: use http://localhost:8080/h2-console to access it
+# WARNING: requires spring-boot-starter-web in pom although baeldung does not mention this...
+spring.h2.console.enabled=true
+server.port=8080
+server.servlet.context-path=
 
+
+# Below are settings used to try to workaround the Access DB from being closed while in use.
+# 
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
@@ -85,9 +81,4 @@ spring.jpa.generate-ddl=false
 #spring.datasource.hikari.maximumPoolSize=2
 #spring.datasource.hikari.minimumIdle=0
 
-# Start the H2 console: use http://localhost:8080/h2-console to access it
-# WARNING: requires spring-boot-starter-web in pom although baeldung does not mention this...
-spring.h2.console.enabled=true
-server.port=8080
-server.servlet.context-path=
 
