auto-server is allowed if used after tomcat restart, h2-console available at application url.

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -27,7 +27,9 @@ falc.account.db.location=C:/Development/accountDB/h2
 
 # FILE_LOCK=NO is supposed to stop locks being put on the DB but tomcat redeploy still fails with locked db errors
 # Seems I should have picked this PostgreSQL thing instead of H2 which really doesn't seem to work well with tomcat.
-spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE;FILE_LOCK=NO
+# ;DB_CLOSE_DELAY=-1
+# ;FILE_LOCK=NO
+spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 
 spring.datasource.name=accounth2db
 spring.datasource.username=sa
@@ -46,10 +48,13 @@ spring.jpa.generate-ddl=false
 
 # Start the H2 console: use http://localhost:8080/h2-console to access it
 # WARNING: requires spring-boot-starter-web in pom although baeldung does not mention this...
-# Does NOT work when running in tomcat so keep it disabled.
-# Looks like will need to use the server mode with tomcat to
-# allow console and ojdbc for Excel and avoid the redeploy locked database errors
-spring.h2.console.enabled=false
+# Does NOT work when running in tomcat.
+# Tomcat needs the AUTO_SERVER=TRUE on the datasource URL.
+# Finally got the H2 console - turns out '/h2-console' must be appended to 
+# the URL of the account web application
+# https://hostname:port/jaccountapi/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=true
 server.port=8080
 server.servlet.context-path=
 
@@ -82,9 +87,7 @@ server.servlet.context-path=
 # keepaliveTime >= 30000
 #spring.datasource.hikari.keepaliveTime=30000
 
-# WTF!? idleTimeout has been set but has no effect because the pool is operating as a fixed size pool.
-# This means maximumPoolSize > minimumIdle is required for idleTimeout to be used
-#spring.datasource.hikari.maximumPoolSize=2
+#spring.datasource.hikari.maximumPoolSize=5
 #spring.datasource.hikari.minimumIdle=0
 
 
