--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -12,6 +12,7 @@ falc.account.version=0.5.1b
 #                               s m  h  d m 
 #falc.account.standingorder.cron=0 10 08 * * ?
 falc.account.standingorder.cron=0 5 */4 * * ?
+
 # NORMAL (default) or SORTED
 falc.account.transaction.listsort=SORTED
 
@@ -24,6 +25,7 @@ spring.jpa.properties.hibernate.show_sql=false
 # of the DB on the production system independently of the installed war file
 falc.account.db.name=accountH2
 falc.account.db.location=C:/Development/accountDB/h2
+falc.account.db.cron=0 45 23 * * ?
 
 # FILE_LOCK=NO is supposed to stop locks being put on the DB but tomcat redeploy still fails with locked db errors
 # Seems I should have picked this PostgreSQL thing instead of H2 which really doesn't seem to work well with tomcat.
