local properties temporarily using forked up PropertySource

--- a/account.api/src/test/resources/application-h2create.properties
+++ b/account.api/src/test/resources/application-h2create.properties
@@ -1,8 +1,10 @@
-
-# "C:/Development/workspace_test/java/account/account.api/db/accountH2create
-# These values should override the values in application.properties - except that they don't always!!!
+# C:/Development/workspace_test/java/account/account.api/db/accountH2create
+# Required values defined in account.properties which cannot be put in application.properties
 falc.account.db.name=accountH2create
 falc.account.db.location=./db
+falc.account.db.cron=0 45 23 * * ?
+spring.datasource.username=sa
+spring.datasource.password=password
 
 # 'update' should will preserve an existing file db, 
 # 'create-drop' is needed to repeatedly run tests which populate the DB.
