--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -23,9 +23,9 @@ spring.jpa.properties.hibernate.show_sql=false
 
 # Still haven't found a way to provide installation dependent configuration, eg. specify the production location
 # of the DB on the production system independently of the installed war file
-falc.account.db.name=accountH2
-falc.account.db.location=C:/Development/accountDB/h2
-falc.account.db.cron=0 45 23 * * ?
+# falc.account.db.name=proddb
+# falc.account.db.location=C:/accountDB
+falc.account.db.cron=0 45 2 * * ?
 
 # FILE_LOCK=NO is supposed to stop locks being put on the DB but tomcat redeploy still fails with locked db errors
 # Seems I should have picked this PostgreSQL thing instead of H2 which really doesn't seem to work well with tomcat.
@@ -34,8 +34,8 @@ falc.account.db.cron=0 45 23 * * ?
 spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 
 spring.datasource.name=accounth2db
-spring.datasource.username=sa
-spring.datasource.password=password
+#spring.datasource.username=user
+#spring.datasource.password=secret
 spring.datasource.driverClassName=org.h2.Driver
 
 # tomcat crashes if this is not set - spring says it is not required as this is the default
