no way to have local properties override default values in tomcat

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+# To let the tomcat installation have use local properties which are not in git
+# for sensitive values the values MUST NOT appear here because the only way to specify
+# the local property file is not able to override the values in application.properties
+#falc.account.db.name=accountH2create
+#falc.account.db.location=C:/Development/workspace_test/java/account/account.api/db
+#spring.datasource.username=sa
+#spring.datasource.password=password
+
 falc.account.name=JAccount
 falc.account.db=H2
 falc.account.version=0.5.1b
@@ -23,8 +31,7 @@ spring.jpa.properties.hibernate.show_sql=false
 
 # Still haven't found a way to provide installation dependent configuration, eg. specify the production location
 # of the DB on the production system independently of the installed war file
-# falc.account.db.name=proddb
-# falc.account.db.location=C:/accountDB
+
 falc.account.db.cron=0 45 2 * * ?
 
 # FILE_LOCK=NO is supposed to stop locks being put on the DB but tomcat redeploy still fails with locked db errors
@@ -34,8 +41,6 @@ falc.account.db.cron=0 45 2 * * ?
 spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 
 spring.datasource.name=accounth2db
-#spring.datasource.username=user
-#spring.datasource.password=secret
 spring.datasource.driverClassName=org.h2.Driver
 
 # tomcat crashes if this is not set - spring says it is not required as this is the default
