more properties that cannot appear in application.properties

--- a/account.api/src/main/resources/application-dev.properties.template
+++ b/account.api/src/main/resources/application-dev.properties.template
@@ -1,12 +1,15 @@
-falc.account.standingorder.cron=* 0 */2 * * ?
+falc.account.db.name=accountH2create
+falc.account.db.location=./db
+spring.datasource.username=sa
+spring.datasource.password=password
+falc.account.db.cron=0 45 2 * * ?
+falc.account.standingorder.cron=0 5 */4 * * ?
+
 
 falc.account.name=DevJAccountH2
 falc.account.db=TEST
 falc.account.version=0.5.0adev
 
-# Uses the DB created and populated by DatabasePopulateTest
-falc.account.db.name=accountH2create
-falc.account.db.location=./db
 
 # this causes an exception when debugging so set it to a high value
 #spring.datasource.hikari.leakDetectionThreshold=1000000
