--- a/account.api/src/test/resources/application-h2create.properties
+++ b/account.api/src/test/resources/application-h2create.properties
@@ -2,9 +2,10 @@
 # Required values defined in account.properties which cannot be put in application.properties
 falc.account.db.name=accountH2create
 falc.account.db.location=./db
-falc.account.db.cron=0 45 23 * * ?
 spring.datasource.username=sa
 spring.datasource.password=password
+falc.account.db.cron=0 45 23 * * ?
+falc.account.standingorder.cron=0 5 */4 * * ?
 
 # 'update' should will preserve an existing file db, 
 # 'create-drop' is needed to repeatedly run tests which populate the DB.
