--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 #falc.account.db.location=C:/Development/workspace_test/java/account/account.api/db
 #spring.datasource.username=sa
 #spring.datasource.password=password
+#falc.account.db.cron=0 45 2 * * ?
+#falc.account.standingorder.cron=0 5 */4 * * ?
 
 falc.account.name=JAccount
 falc.account.db=H2
@@ -19,7 +21,6 @@ falc.account.version=0.5.1b
 # "*/10 * * * * *" every 10 seconds
 #                               s m  h  d m 
 #falc.account.standingorder.cron=0 10 08 * * ?
-falc.account.standingorder.cron=0 5 */4 * * ?
 
 # NORMAL (default) or SORTED
 falc.account.transaction.listsort=SORTED
@@ -32,7 +33,6 @@ spring.jpa.properties.hibernate.show_sql=false
 # Still haven't found a way to provide installation dependent configuration, eg. specify the production location
 # of the DB on the production system independently of the installed war file
 
-falc.account.db.cron=0 45 2 * * ?
 
 # FILE_LOCK=NO is supposed to stop locks being put on the DB but tomcat redeploy still fails with locked db errors
 # Seems I should have picked this PostgreSQL thing instead of H2 which really doesn't seem to work well with tomcat.
